# fun-game

./: AGENTS.md  Cargo.toml
.cargo/: config.toml
src/: main.rs
